fix a bug in core